--- a/snmp.qmd
+++ b/snmp.qmd
@@ -17,7 +17,9 @@ code-block-bg: dark
 
 **`show snmp host`** - Displays the SNMP notifications sent as traps, the version of SNMP, and the host IP address of the notifications
 
-**`show snmp group`** - Displays SNMP group information (v3) **show snmp user** - Displays SNMP user information (v3)
+**`show snmp group`** - Displays SNMP group information (v3)
+
+**`show snmp user`** - Displays SNMP user information (v3)
 
 ------------------------------------------------------------------------
 
@@ -39,8 +41,8 @@ snmp-server enable traps ospf                                                   
 snmp ifmib ifindex persist\
 snmp-server location \<location\>\
 snmp-server contact \<contact-details\>\
-no snmp-server system-shutdown ! prevents device being shutdown via SNMP\
-snmp-server view \<view-name\> iso included ! iso included allows all values\
+no snmp-server system-shutdown                                     ! prevents device being shutdown via SNMP\
+snmp-server view \<view-name\> iso included                        ! iso included allows all values\
 snmp-server group \<group-name\> v3 priv read \<view-name\> write \<view-name\>\
 snmp-server user \<user-name\> \<group-name\> v3 auth sha \<password\> priv aes 256 \<password\>\
 snmp-server host 10.1.100.100 version 3 priv \<user-name\>
