--- a/bgp.qmd
+++ b/bgp.qmd
@@ -88,10 +88,11 @@ Cheat sheet - [https://ipcisco.com/wp-content/uploads/Cheat-Sheets/bgp.pdf](http
 
 ## Summarisation
 
--   Configured on AS Edge Routers.
--   configured with `aggregate-address 10.0.0.0 255.0.0.0 [summary-only] [as-set]`
+-   Configured on AS Edge Routers
+-   Can use `auto-summary` however this only summarises classful networks
+-   Configured with `aggregate-address 10.0.0.0 255.0.0.0 [summary-only] [as-set]`
     -   use of `summary-only` advertises only summary route, not the aggregated networks
-    -   use of `[as-set]` carries over AS_Path attributes from component routes.
+    -   use of `[as-set]` carries over AS_Path attributes from component routes. (disordered AS's in Curly brackets)
 -   These routes are assigned the ***ATOMIC_AGGREGATE*** attribute to indicate they are aggregates & that loss of path info has occurred.
 -   The summarising router adds an entry in their RIB with destination Null0 to avoid loops.
 -   AS_Path, MED +communities aren't included in new prefix info
@@ -109,11 +110,55 @@ Cheat sheet - [https://ipcisco.com/wp-content/uploads/Cheat-Sheets/bgp.pdf](http
 
     -   Redistribute Static under the BGP precess.
 
+## Next Hop Reachability
+
+-   eBGP: next-hop IP address is updated by the advertising router.
+-   iBGP: next-hop IP is not changed but is configurable.
+
 ------------------------------------------------------------------------
 
 # BGP Configuration
 
 `bgp redistribute-internal` - all BGP routes redistributes
+
+``` default
+router bgp 100
+ bgp router-id 4.4.4.4
+ ! iBGP Neighbor
+ neighbor 150.1.1.1 remote-as 100
+ neighbor 150.1.1.1 update-source loopback0
+ neighbor 155.1.1.1 route-reflector-client
+ neighbor 155.1.1.1 next-hop-self # will only affect eBGP routes for RR clients
+ ! eBGP Neighbor
+ neighbor 150.1.3.3 remote-as 200
+ neighbor 150.1.3.3 update-source loopback0
+ neighbor 150.1.3.3 ebgp-multihop
+ neighbor 150.1.3.3 send-community both
+ neighbor 150.1.3.3 route-map FROM_R3 in
+ neighbor 150.1.3.3 route-map TO_R3 in
+ !
+ network 155.1.4.0 255.255.255.0 route-map SET_COMMUNITY_50
+ network 150.1.4.0 255.255.255.0
+!
+ip prefix-list BGP_PREPEND_1 seq 5 permit 150.1.4.0/24
+!
+ip prefix-list DEF
+LT seq 5 permit 0.0.0.0/0
+!
+route-map FROM_R3 deny 10
+ match ip address prefix-list DEFAULT
+!
+route-map FROM_R3 permit 10000
+!
+route-map TO_R3 permit 10
+ match ip address prefix-list BGP_PREPEND_1
+ set as-path prepend 100 100 100 100
+!
+route-map TO_R3 permit 10000
+!
+route-map SET_COMMUNITY_50 permit 10
+ set community 50
+```
 
 ------------------------------------------------------------------------
 
