--- a/misc.qmd
+++ b/misc.qmd
@@ -45,3 +45,11 @@ BGP learned route RIB Failure (r)
 2.  We can't reach the next hop associated with that route (neighbour advertising route with different next hop that itself. )
 
 LDP Extended Discovery Message - Unicast message used to find and establish session with LDP Neighbour (LSR) not directly reachable via multiast hello's.
+
+`debug CEF interface` - debugs events related to CEF
+
+-   Planes
+    -   Management Plane - Anything which is used to manage the device
+    -   Data Plane - switching frames/routing packets.
+        -   Services Plane (Subset of Data) - facilitates encapsulation of user data into tunnels (QoS, MPLS VPNs, IPSec Tunnels, GRE Tunnels)
+    -   Control Plane - Controls that facilitates the learning of destinations, prefixes, MAC Addresses (IP/IPv6 addresses, MAC, ARP, IPv6 Neighbour discovery)
