--- a/routemap-pbr.qmd
+++ b/routemap-pbr.qmd
@@ -20,8 +20,9 @@ code-block-bg: dark
 -   Can specify multiple next-hops - when done the first will be used if the next-hop is adjacent, otherwise it will use the second, third, etc
 -   If you want to use a non-adjacent route, you must use the `recursive` flag when configuring the route-map `set` statement
 -   Config options:
-    -   `set ip next-hop ip-address [ip]`  - sets next hop IP.
-    -   `set ip default next-hop ip-address [ip]` - `default` changes behavior - configures next hop IP only if there is no explicit route for this destination.
+    -   `set ip next-hop ip-address [ip]` - sets next hop IP - doesn't verify reachability, if next hop unreachable the packets are dropped.
+    -   `set ip next-hop verify-availability 10.1.1.1 1 track 10`  - Verifies reachability via tracking/IPSLA, if next hop down PBR entry is skipped, packet routed by RIB
+    -   `set ip default next-hop ip-address [ip]` - `default` - Fallback,  - if routing table has a match for destination it wins, if no route exists - configred next hop wins.
         -   If destination **exists in route table**: the command doesn't policy route, routes based on routing table
         -   If destination **does not** **exist in route table**: the command policy routes the packet to the next hop.
     -   `set interface [interface type] [interface-number]` (multiple ints will be tried in turn)
